tools/depends/native/zlib-native/x86_64-osx-native/configure.log
--------------------
./configure --prefix=/Users/Shared/xbmc-depends/buildtools-native
Tue Jan 31 15:55:29 IST 2017

=== ztest37340.c ===
extern int getchar();
int hello() {return getchar();}
===
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -c ztest37340.c
... using gcc

Checking for shared library support...
=== ztest37340.c ===
extern int getchar();
int hello() {return getchar();}
===
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -w -c -fPIC ztest37340.c
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.7 -fPIC -o ztest37340.dylib ztest37340.o
Building shared library libz.1.2.7.dylib with /Applications/Xcode.app/Contents/Developer/usr/bin/gcc.


=== ztest37340.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -c -D_LARGEFILE64_SOURCE=1 ztest37340.c
ztest37340.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/sys/_types/_off_t.h:30:25: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest37340.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -o ztest37340 ztest37340.c
Checking for fseeko... Yes.

=== ztest37340.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -o ztest37340 ztest37340.c
Checking for strerror... Yes.

=== ztest37340.c ===
#include <unistd.h>
int main() { return 0; }
===
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -c ztest37340.c
Checking for unistd.h... Yes.

=== ztest37340.c ===
#include <stdarg.h>
int main() { return 0; }
===
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -c ztest37340.c
Checking for stdarg.h... Yes.

=== ztest37340.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -c ztest37340.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest37340.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -o ztest37340 ztest37340.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest37340.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -c ztest37340.c
Checking for return value of vsnprintf()... Yes.

=== ztest37340.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -c ztest37340.c
Checking for attribute(visibility) support... Yes.

=== ztest37340.c ===
#include <stdio.h>
#define is32(n,t) for(n=1,k=0;n;n<<=1,k++);if(k==32){puts(t);return 0;}
int main() {
    int k;
    unsigned i;
    unsigned long l;
    unsigned short s;
    is32(i, "unsigned")
    is32(l, "unsigned long")
    is32(s, "unsigned short")
    return 1;
}
===
/Applications/Xcode.app/Contents/Developer/usr/bin/gcc -DHAVE_HIDDEN ztest37340.c -o ztest37340
Looking for a four-byte integer type... Found.

ALL = static shared
AR = /usr/bin/libtool
ARFLAGS = -o
CC = /Applications/Xcode.app/Contents/Developer/usr/bin/gcc
CFLAGS = -DHAVE_HIDDEN
CPP = /Applications/Xcode.app/Contents/Developer/usr/bin/gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = /Applications/Xcode.app/Contents/Developer/usr/bin/gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.7
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -fPIC -DHAVE_HIDDEN
SHAREDLIB = libz.dylib
SHAREDLIBM = libz.1.dylib
SHAREDLIBV = libz.1.2.7.dylib
STATICLIB = libz.a
TEST = all teststatic testshared
VER = 1.2.7
Z_U4 = unsigned
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /Users/Shared/xbmc-depends/buildtools-native
sharedlibdir = ${libdir}
uname = Darwin
--------------------


